fixed some alignment

--- a/styles/about.css
+++ b/styles/about.css
@@ -11,7 +11,7 @@
 
 .about-col-1{
   flex-basis: 35%;
-  max-height: 750px;
+  max-height: 500px;
   overflow: hidden;
   border-radius: 15px;
 }
@@ -38,7 +38,7 @@
   display: flex;
 }
 .tab-links{
-  margin-top: 50px;
+  margin-top: 25px;
   margin-right: 30px;
   position: relative;
 }
@@ -76,6 +76,6 @@
 }
 
 .tab-contents.active-tab{
-  margin-top: 50px;
+  margin-top: 25px;
   display: block;
 }
