--- a/styles/general.css
+++ b/styles/general.css
@@ -17,7 +17,7 @@ html{
   nav .logo{
     font-size: 50px;
   }
-  .hamburger{
+  #header .hamburger{
     position: relative;
     display: block;
     width: 35px;
@@ -57,29 +57,26 @@ html{
   #about .row{
     flex-direction: column;
   }
+  #about .sub-title{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 40px;
+  }
   #about .about-col-1{
     display: flex;
     width: 100%;
     justify-content: center;
+    margin-bottom: 20px;
   }
   #about .about-col-1 img{
     width: 80%;
   }
-
-  #about .sub-title{
-    margin-top: 20px;
-    font-size: 40px;
-  }
-
   #about .tab-links{
     margin-top: 20px;
   }
-
   #about .tab-contents.active-tab{
     margin-top: 20px;
   }
-
-
   /* -------capstone-------- */
 
   #capstone .sub-title{
