--- a/styles/header.css
+++ b/styles/header.css
@@ -62,6 +62,9 @@ nav ul li a:hover::after{
   left: 0;
   width: 100%;
 }
+.hamburger{
+  display: none;
+}
 
   /* header text */
 .header-text{
